# hide-mcp

./: .gitignore  Dockerfile  Dockerfile.template  README.md  build_mcp.sh  hide-mcp.spec  pyproject.toml
src/hide_mcp/: __init__.py  logging_utils.py  proxy.py  sandbox.py  server.py  sse.py
src/hide_mcp/tools/: base.py  bash.py  collection.py  computer.py  edit.py
