[project]
name = "hide-mcp"
version = "0.1.0"
description = "A MCP server for Hide"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "anthropic>=0.39.0",
 "click>=8.1.7",
 "e2b-code-interpreter>=1.0.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
 "uvicorn>=0.32.1",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
hide-mcp = "hide_mcp:main"

[tool.pyright]
include = ["src"]
venvPath = "."
venv = ".venv"
